--- a/my-website/docs/ETH操作手册/创建助记词.md
+++ b/my-website/docs/ETH操作手册/创建助记词.md
@@ -2,58 +2,62 @@
 sidebar_position: 1
 ---
 创建助记词&生成KeyStore
-### 下载最新的[Wagyu Key Gen](https://github.com/stake-house/wagyu-key-gen)应用
+### 1. 下载最新的[Wagyu Key Gen](https://github.com/stake-house/wagyu-key-gen)应用
     ❗️❗️建议从离线机器上安装运行“Wagyu Key Gen”，或在断开互联网连接情况下生成助记词密钥。
 
-- [官方下载源，点此选择下载](https://github.com/stake-house/wagyu-key-gen/releases)
+- 点击[官方下载源](https://github.com/stake-house/wagyu-key-gen/releases)选择下载。
+点击下载链接，选择最新版本应用，下滑至该版本Assets处，根据设备型号选择下载源。
+![version](/img/p1/wagyu_v1.5.0.png)
 
+下载参考：
     - 使用设备：Windows
-        - 下载参考(Windows v1.5.0版本)：https://github.com/stake-house/wagyu-key-gen/releases/download/v1.5.0/Wagyu.Key.Gen.1.5.0.exe 
+        - 选择(Windows v1.5.0版本)：https://github.com/stake-house/wagyu-key-gen/releases/download/v1.5.0/Wagyu.Key.Gen.1.5.0.exe 
     - 使用设备：Mac
-        - 下载参考(MAC v1.5.0版本)：https://github.com/stake-house/wagyu-key-gen/releases/download/v1.5.0/Wagyu.Key.Gen-1.5.0.dmg 
-### 安装 Wagyu Key Gen
-下载完成后按提示进行安装，Mac设备若安装完成应用后无法打开，使用以下方式允许该应用运行
+        - 选择(MAC v1.5.0版本)：https://github.com/stake-house/wagyu-key-gen/releases/download/v1.5.0/Wagyu.Key.Gen-1.5.0.dmg 
+### 2. 安装 Wagyu Key Gen
+下载完成后点击软件包进行安装，Mac设备若安装完成后应用无法打开，使用以下方式允许该应用运行
 
     1. 在Mac上，选取苹果菜单>“系统偏好设置”，点按“安全性与隐私”，点按“通用”。
     2. 点击左下角🔒解锁输入密码，查看 “已阻止使用“Wagyu Key Gen”，因为来自身份不明的开发者。仍要打开”
-    3. 点击“仍要打开”，左下角🔒锁定。
+    3. 点击“仍要打开”，后点击左下角🔒锁定。
+![解锁](/img/p1/解锁.png)
 
-### 生成助记词及密钥
+### 3. 生成助记词及密钥
 
-- 创建助记词。点击页面“CREATE NEW SECRET RECOVERY PHRASE”->弹出NETWORK对话框，选择MAINNET(默认)
+- 创建助记词。点击页面`CREATE NEW SECRET RECOVERY PHRASE`->弹出”NETWORK“对话框，选择MAINNET(默认)->点击`OK`
+![network](/img/p1/network.png)
+- 跳转“Create Secret Recovery Phrase”页面->点击 `NEST`，等待大约30秒，弹出24位助记词。
+![wait](/img/p1/wait_words.png)
+- 备份您的助记词(备份在离线设备或手动记录)，建议备份>1份，备份完成后点击`NEXT`。
 
-- 跳转"Create Secret Recovery Phrase"页面->点击 NEST，等待半分钟，弹出24位助记词。
+- 确认已经备份您的助记词，点击`I'M SURE`，请您耐心在对应文本框内填写您的助记词进行再次确认，点击`CHECK`进行核查。
 
-- 备份您的助记词，建议备份>1份，备份完成后点击NEXT。
+    ❗️❗️确保您的秘密恢复短语和验证者密钥安全，因为您未来需要它们取回您的资金，没有它，您将无法取回您的资金！另外任何有权访问这些的人将能够窃取您的资金！
 
-- 确认已经备份您的助记词，点击NEST，在文本框内填写您的助记词进行二次确认，点击CHECK进行核查。
+- 在“Number of New Keys” 文本框内输入您要创建的validator key的数量(1/2/..)，可同时创建多个validator keys。设置您的密码进行加密，点击`Next`。❗️请同时备份您的密码。
+![number](/img/p1/passwd.png)
 
-    ❗️❗️确保您的秘密恢复短语和验证者密钥安全，因为您稍后将需要它们来取回您的资金。任何有权访问这些的人也将能够窃取您的资金！
-    没有它，您将无法取回您的资金！
+    可选：若您想在资金或收益收回时使用一个新地址存储它们，可打开`Use Advanced Inputs`,输入您的以太坊提现地址（❗️❗️请确保您可以控制该地址）
+![address](/img/p1/收益地址.png)
+- 输入您的密码进行 二次确认。点击`NEXT`
 
-- 在“Number of New Keys” 文本框内输入您要创建的validator key的数量，可同时创建多个validator keys。输入密码进行加密，点击Next.
+- 选择保存您的keys文件的路径，点击`BROWSE`选择路径，点击`CREATE`进行文件创建。每个密钥生成的时间约为30S，请耐心等待，您的密钥正在生成中。
+![src](/img/p1/src.png)
+![key](/img/p1/finish.png)
+- 恭喜您！出现该页面意味着您的密钥文件(keystore文件与deposit_data文件)已经创建成功，可在第7步选择的路径下中查看您的密钥信息。注意：关闭此程序后剪切板内容将被清除，请最后确认您的助记词已安全存储！
+![congr](/img/p1/congr.png)
 
-    - 可选：若您想在资金或收益收回时使用一个新地址存储它们，可打开”Use Advanced Inputs“,输入您的以太坊提现地址（❗️❗️请确保您可以控制改地址）
-- 输入您的密码进行 二次确认。点击NEXT
+    关于密钥文件的描述：
 
-- 选择保存您的keys的文件夹，点击`BROWSE`选择文件夹，点击CREATE进行文件创建。每个密钥生成的时间约为30S，请耐心等待，您的密钥正在生成中。
+    1. 秘密恢复短语（24 字）
+    这是您创建的第一个密钥。拥有它方可操作您的资金，必须完整保存且保持私密，❗️❗️丢失后将无法恢复。它也被称为“助记符”或“种子短语”。您需要它来提取你的资金，尽量将多份副本保存在不同的物理位置，以防被盗、或遭受火灾、水灾及其他危险。
 
-当出现该页面，那么恭喜您，您的密钥已经创建成功，可在第7步选择的文件夹中进行查看。
+    2. 密钥库文件（例如 keystore-xxxxxxx.json）
+    此文件近拥有签署区块的能力，无法控制转账。它需要用来设置您的验证器，除搭建节点人员外，尽量不要与任何人分享。丢失后可以使用助记词恢复它。
 
-
-    这里是每个文件的描述：
-
-    密钥库文件（例如 keystore-xxxxxxx.json）
-
-    此文件控制您签署交易的能力。需要设置您的验证器。不要与任何人分享。如有必要，可以从您的秘密恢复短语中重新创建它。
-
-    存款数据文件（例如 deposit_data-xxxxxx.json）
-
-    此文件代表有关您的验证器的公共信息。需要通过 Ethereum Launchpad 执行您的存款。如有必要，可以从您的秘密恢复短语中重新创建它。
-
-    秘密恢复短语（24 字）
-
-    这是您创建的第一件事。它也被称为“助记符”或“种子短语”。你需要这个来提取你的资金。将多份副本保存在不同的物理位置，以防被盗、火灾、水和其他危险。保持私密。没有办法恢复这一点。
+    3. 存款数据文件（例如 deposit_data-xxxxxx.json）
+    此文件代表有关您的验证器的公共信息。需要通过 Ethereum Launchpad 执行您的存款。丢失后可以使用助记词恢复它。
+    
 
 
 
